Fix: white space on bottom of YouDid

--- a/src/components/YouDid/YouDid.css
+++ b/src/components/YouDid/YouDid.css
@@ -1,7 +1,7 @@
 .you-did {
   font-family: var(--primary-font);
   margin: 0;
-  height: auto;
+  height: 100%;
 }
 
 .you-did-title {
